--- a/src/pages/TodoAppMain.module.css
+++ b/src/pages/TodoAppMain.module.css
@@ -15,6 +15,6 @@
   position: relative;
   background-color: var(--light-background-default);
   width: 100%;
-  height: 668px;
+  height: 100%;
   flex-direction: column;
 }
