--- a/src/components/TaskItem.module.css
+++ b/src/components/TaskItem.module.css
@@ -1,52 +1,29 @@
-.checkboxChild {
-  position: relative;
-  width: 22px;
-  height: 22px;
-  flex-shrink: 0;
-}
-.checkbox {
-  overflow: hidden;
+.task {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: flex-start;
+  padding: 10px;
+  gap: 10px;
+  border-bottom: 4px solid #f2f2f2;
+  width: 100%;
 }
-.uiCreate {
-  position: relative;
+.checkbox:hover {
+  background-color: #f2f2f2;
+  cursor: pointer;
+}
+
+.description {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
   letter-spacing: 0.8px;
+
+  color: #272727;
 }
-.taskcontainer {
-  height: 42px;
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-sm);
-  box-sizing: border-box;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-md);
-}
-.separator,
-.taskcontainer,
-.taskitem {
-  align-self: stretch;
-  overflow: hidden;
-}
-.separator {
-  position: relative;
-  background-color: var(--color-gray-200);
-  height: 4px;
-  flex-shrink: 0;
-}
-.taskitem {
-  background-color: var(--light-background-default);
-  display: flex;
-  flex-direction: column;
-  padding: var(--padding-xs) 0;
-  align-items: flex-start;
-  justify-content: flex-start;
-  text-align: left;
-  font-size: var(--font-size-base);
-  color: var(--color-gray-500);
-  font-family: var(--font-roboto);
-}
+
