--- a/src/components/AddTaskForm.module.css
+++ b/src/components/AddTaskForm.module.css
@@ -1,3 +1,43 @@
+.addtask {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 10px;
+  gap: 10px;
+}
+
+.description {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  /* identical to box height */
+
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.8px;
+
+  color: #272727;
+}
+
+.addbutton {
+background-image: url('../../public/addbuttonnormal.svg');
+background-repeat: no-repeat;
+background-position: center;
+background-size: 100%;
+width: 20px;
+height: 20px;
+}
+.addbutton:hover {
+background-image: url('../../public/addbuttonhover.svg');
+background-repeat: no-repeat;
+background-position: center;
+background-size: 100%;
+width: 20px;
+height: 20px;
+}
+
 .taskform {
   /* Auto layout */
 
