--- a/src/components/TaskItem.module.css
+++ b/src/components/TaskItem.module.css
@@ -7,18 +7,16 @@
   border-bottom: 4px solid #f2f2f2;
   width: 100%;
 }
-.checkbox{
-  background-image: url('../../public/ellipse-1.svg');
+.checkbox {
+  background-image: url("../../public/ellipse-1.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
   width: 20px;
   height: 20px;
-  
- 
 }
 .checkbox:hover {
-  background-image: url('../../public/ellipse-2.svg');
+  background-image: url("../../public/ellipse-2.svg");
   background-color: #f2f2f2;
   border-radius: 50%;
   cursor: pointer;
@@ -39,3 +37,26 @@
   color: #272727;
 }
 
+.editButton {
+  /* Cancel */
+
+  /* Auto layout */
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 7px 10px;
+  gap: 10px;
+
+  width: 73px;
+  height: 33px;
+
+  background: #f5f5f5;
+  border-radius: 4px;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
